kubernetes/workloads/netbox/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  namespace: netbox
  labels:
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbox
    app.kubernetes.io/version: v4.2.6
    helm.sh/chart: netbox-5.0.57
    app.kubernetes.io/component: netbox
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: netbox
      app.kubernetes.io/name: netbox
      app.kubernetes.io/component: netbox
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: 91fdead49ebebd2f99c46014ab7b2d4162e1db01605e0fcf36bb1b9f5e025ec2
      labels:
        app.kubernetes.io/instance: netbox
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: netbox
        app.kubernetes.io/version: v4.2.6
        helm.sh/chart: netbox-5.0.57
        app.kubernetes.io/component: netbox
    spec:
      serviceAccountName: netbox
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: netbox
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          image: ghcr.io/netbox-community/netbox:v4.2.6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: nginx-status
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /status/applications/netbox/processes/running
              port: nginx-status
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /login/
              port: http
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /login/
              port: http
          volumeMounts:
            - name: config
              mountPath: /etc/netbox/config/configuration.py
              subPath: configuration.py
              readOnly: true
            - name: config
              mountPath: /run/config/netbox
              readOnly: true
            - name: secrets
              mountPath: /run/secrets/netbox
              readOnly: true
            - name: netbox-tmp
              mountPath: /tmp
            - name: media
              mountPath: /opt/netbox/netbox/media
              subPath: ""
            - name: optunit
              mountPath: /opt/unit
            - name: secrets
              mountPath: /run/secrets/superuser_password
              subPath: superuser_password
              readOnly: true
            - name: secrets
              mountPath: /run/secrets/superuser_api_token
              subPath: superuser_api_token
              readOnly: true
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 1536Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 1024Mi
      volumes:
        - name: config
          configMap:
            name: netbox
        - name: secrets
          projected:
            sources:
              - secret:
                  name: netbox-config
                  items:
                    - key: secret_key
                      path: secret_key
              - secret:
                  name: netbox-config
                  items:
                    - key: email_password
                      path: email_password
              - secret:
                  name: netbox-superuser
                  items:
                    - key: password
                      path: superuser_password
                    - key: api_token
                      path: superuser_api_token
              - secret:
                  name: netbox-postgresql-credentials
                  items:
                    - key: password
                      path: db_password
              - secret:
                  name: redis-password
                  items:
                    - key: redis-password
                      path: redis_tasks_password
              - secret:
                  name: redis-password
                  items:
                    - key: redis-password
                      path: redis_cache_password
        - name: netbox-tmp
          emptyDir:
            medium: Memory
        - name: optunit
          emptyDir:
            medium: Memory
        - name: media
          persistentVolumeClaim:
            claimName: netbox-media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-worker
  namespace: netbox
  labels:
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbox
    app.kubernetes.io/version: v4.2.6
    helm.sh/chart: netbox-5.0.57
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: netbox
      app.kubernetes.io/name: netbox
      app.kubernetes.io/component: worker
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: 416ba3b8f2ce732eb113192af86447584b5784c7d2272ad5ba75e0f744771f11
      labels:
        app.kubernetes.io/instance: netbox
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: netbox
        app.kubernetes.io/version: v4.2.6
        helm.sh/chart: netbox-5.0.57
        app.kubernetes.io/component: worker
    spec:
      serviceAccountName: netbox
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: netbox-worker
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          image: ghcr.io/netbox-community/netbox:v4.2.6
          imagePullPolicy: IfNotPresent
          command:
            - /opt/netbox/venv/bin/python
            - /opt/netbox/netbox/manage.py
            - rqworker
          volumeMounts:
            - name: config
              mountPath: /etc/netbox/config/configuration.py
              subPath: configuration.py
              readOnly: true
            - name: config
              mountPath: /run/config/netbox
              readOnly: true
            - name: secrets
              mountPath: /run/secrets/netbox
              readOnly: true
            - name: netbox-tmp
              mountPath: /tmp
            - name: media
              mountPath: /opt/netbox/netbox/media
              subPath: ""
              readOnly: false
      volumes:
        - name: config
          configMap:
            name: netbox
        - name: secrets
          projected:
            sources:
              - secret:
                  name: netbox-config
                  items:
                    - key: secret_key
                      path: secret_key
              - secret:
                  name: netbox-config
                  items:
                    - key: email_password
                      path: email_password
              - secret:
                  name: netbox-superuser
                  items:
                    - key: password
                      path: superuser_password
                    - key: api_token
                      path: superuser_api_token
              - secret:
                  name: netbox-postgresql-credentials
                  items:
                    - key: password
                      path: db_password
              - secret:
                  name: redis-password
                  items:
                    - key: redis-password
                      path: redis_tasks_password
              - secret:
                  name: redis-password
                  items:
                    - key: redis-password
                      path: redis_cache_password
        - name: netbox-tmp
          emptyDir:
            medium: Memory
        - name: media
          persistentVolumeClaim:
            claimName: netbox-media
            readOnly: false
