kubernetes/workloads/netbox/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
  labels:
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbox
    app.kubernetes.io/version: v4.4.5
    helm.sh/chart: netbox-7.1.18
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
      nodePort: null
  selector:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/component: netbox
  sessionAffinity: None
