kubernetes/workloads/netbox/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
  labels:
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbox
    app.kubernetes.io/version: v4.2.6
    helm.sh/chart: netbox-5.0.57
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - netbox.fh.dronen.house
      secretName: netbox-server-tls
  rules:
    - host: netbox.fh.dronen.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbox
                port:
                  name: http
